Closed Bug 947587 Opened 11 years ago Closed 11 years ago

non-jit build failing with invalid use of incomplete type 'class js::jit::TempAllocator' - related to unified builds ?

Categories

(Core :: JavaScript Engine, defect)

26 Branch
Sun
OpenBSD
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla29
Tracking Status
firefox26 --- unaffected
firefox27 --- unaffected
firefox28 --- verified
firefox29 --- verified

People

(Reporter: gaston, Assigned: jandem)

Details

Attachments

(1 file)

My sparc64 builder started failing two days ago with:

In file included from /data/obj/buildslave/m-c/js/src/Unified_cpp_2.cpp:110:0:
/home/buildslave/mozilla-central-sparc64/build/js/src/jsinfer.cpp: In constructor 'js::types::CompilerConstraintList::CompilerConstraintList(js::jit::TempAllocator&)':
/home/buildslave/mozilla-central-sparc64/build/js/src/jsinfer.cpp:599:21: error: invalid use of incomplete type 'class js::jit::TempAllocator'
       , alloc_(alloc.lifoAlloc())
                     ^
In file included from /home/buildslave/mozilla-central-sparc64/build/js/src/vm/ObjectImpl.h:16:0,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/jsobj.h:23,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/jsgc.h:16,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/vm/Runtime.h:21,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/jscntxt.h:15,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/builtin/TypeRepresentation.h:59,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/jscompartment.h:12,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/jsanalyze.h:12,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/jsanalyzeinlines.h:10,
                 from /home/buildslave/mozilla-central-sparc64/build/js/src/jsanalyze.cpp:7,
                 from /data/obj/buildslave/m-c/js/src/Unified_cpp_2.cpp:2:
/home/buildslave/mozilla-central-sparc64/build/js/src/jsinfer.h:171:11: error: forward declaration of 'class js::jit::TempAllocator'
     class TempAllocator;


This started with http://buildbot.rhaalovely.net/builders/mozilla-central-sparc64/builds/632 / 2831368a5e
previous working rev was http://buildbot.rhaalovely.net/builders/mozilla-central-sparc64/builds/631 / 1426ffa9caf2

maybe related to an unified build change missing an include somewhere in the non-ion case ?
gaston, does this patch fix the problem?
Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Attachment #8347596 - Flags: review?(bhackett1024)
the build seems to go further, i'll confirm in a few after running jsapi-tests
Comment on attachment 8347596 [details] [diff] [review]
Fix --disable-ion build

Build is broken ways later on sparc64 for now because of bug 950343, but this patch itself allows all js code to build so i'm going to assume it fixes this specific issue.
Attachment #8347596 - Flags: feedback+
and jsapi-tests all succeed, so definitely a good fix - testing it on an aurora tree now
Attachment #8347596 - Flags: review?(bhackett1024) → review+
Comment on attachment 8347596 [details] [diff] [review]
Fix --disable-ion build

[Approval Request Comment]
Bug caused by (feature/regressing bug #): a recent js_ion change
User impact if declined: failure to build on non-ion archs, NPOTB
Risk to taking this patch (and alternatives if risky): none

https://hg.mozilla.org/integration/mozilla-inbound/rev/93120ca81d5a
Attachment #8347596 - Flags: approval-mozilla-aurora?
Comment on attachment 8347596 [details] [diff] [review]
Fix --disable-ion build

NPOTB doesn't require approval :)
Attachment #8347596 - Flags: approval-mozilla-aurora?
Whiteboard: [checkin-needed-aurora]
https://hg.mozilla.org/mozilla-central/rev/93120ca81d5a
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Landry, can you please verify this is fixed in Firefox 28 and 29?
Flags: needinfo?(landry)
The build is now busted for other fallout of other changes on sparc64, but that particular issue was fixed by that commit.
Flags: needinfo?(landry)
(In reply to Landry Breuil (:gaston) from comment #12)
> The build is now busted for other fallout of other changes on sparc64, but
> that particular issue was fixed by that commit.

Please link the other bugs here.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: