Bug 947587 - fix non-ion builds r=bhackett